; ModuleID = '/home/carl/AnghaBench/radare2/shlr/windbg/extr_transport.c_iob_config.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/windbg/extr_transport.c_iob_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*, i8*)* }

@sel_backend = common dso_local global %struct.TYPE_2__* null, align 8
@E_NOIF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iob_config(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sel_backend, align 8
  %7 = icmp ne %struct.TYPE_2__* %6, null
  br i1 %7, label %10, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* @E_NOIF, align 4
  store i32 %9, i32* %3, align 4
  br label %17

10:                                               ; preds = %2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @sel_backend, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %12, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 %13(i8* %14, i8* %15)
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %10, %8
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
